--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_snow"
-        android:padding="15dp"
+        android:padding="@dimen/padding_15"
         tools:context=".main.MainFragment">
 
         <TextView
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="@string/main_input_name_desc"
             android:textColor="@color/black"
-            android:textSize="12dp"
+            android:textSize="@dimen/text_12"
             app:layout_constraintBottom_toTopOf="@+id/MainFragmentInputName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,10 +37,10 @@
             android:id="@+id/MainFragmentInputTitleDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_10"
             android:text="@string/main_input_name_text_desc"
             android:textColor="@color/black"
-            android:textSize="12dp"
+            android:textSize="@dimen/text_12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MainFragmentInputName" />
 
@@ -60,9 +60,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/main_input_name_text_desc"
+            android:text="@string/main_fragment_input_text_desc"
             android:textColor="@color/black"
-            android:textSize="12dp"
+            android:textSize="@dimen/text_12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MainFragmentInputTitle" />
 
@@ -79,10 +79,10 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/MainFragmentProfileImage"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
+            android:layout_width="@dimen/card_profile_image_width"
+            android:layout_height="@dimen/card_profile_image_height"
+            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_20"
             android:src="@drawable/face1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -91,13 +91,13 @@
             android:id="@+id/MainFragmentButtonTest"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/margin_20"
             android:background="@drawable/custom_button_test"
             android:stateListAnimator="@drawable/zoom_animation"
             android:text="@string/main_button_test_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MainFragmentInputText"
@@ -107,13 +107,13 @@
             android:id="@+id/MainFragmentButtonLaunch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_10"
             android:background="@drawable/custom_button_launch"
             android:stateListAnimator="@drawable/zoom_animation"
             android:text="@string/Main_button_launch_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MainFragmentButtonTest"
@@ -123,8 +123,8 @@
             android:id="@+id/mainFragmentImagePrevious"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="@dimen/margin_20"
+            android:layout_marginBottom="@dimen/margin_40"
             android:background="@android:color/transparent"
             android:src="@drawable/left_arrow"
             app:layout_constraintBottom_toBottomOf="@+id/MainFragmentImageSwitcher"
@@ -132,8 +132,8 @@
 
         <ImageSwitcher
             android:id="@+id/MainFragmentImageSwitcher"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="@dimen/card_width"
+            android:layout_height="@dimen/card_height"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MainFragmentButtonLaunch" />
@@ -142,8 +142,8 @@
             android:id="@+id/MainFragmentImageNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginStart="@dimen/margin_20"
+            android:layout_marginBottom="@dimen/margin_40"
             android:background="@android:color/transparent"
             android:src="@drawable/right_arrow"
             app:layout_constraintBottom_toBottomOf="@+id/MainFragmentImageSwitcher"
@@ -161,7 +161,7 @@
             android:id="@+id/MainFragmentThemePrevious"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="@dimen/margin_80"
             android:background="@android:color/transparent"
             android:src="@drawable/left_arrow_bold"
             app:layout_constraintBottom_toBottomOf="@id/MainFragmentCardRecyclerView"
@@ -171,7 +171,7 @@
             android:id="@+id/MainFragmentThemeNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="@dimen/margin_80"
             android:background="@android:color/transparent"
             android:src="@drawable/right_arrow_bold"
             app:layout_constraintBottom_toBottomOf="@id/MainFragmentCardRecyclerView"
