--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.postcard.main.MainFragment"
+        android:name="com.example.postcard.ui.main.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/cardFragment"
-        android:name="com.example.postcard.card.CardTestFragment"
+        android:name="com.example.postcard.ui.card.CardTestFragment"
         android:label="fragment_card"
         tools:layout="@layout/fragment_card" />
 </navigation>
