--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/cardItem"
     android:layout_height="@dimen/item_height"
     android:layout_marginStart="@dimen/margin_60"
     android:layout_marginTop="@dimen/margin_10"
@@ -12,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/ItemImage"
+            android:id="@+id/cardItemImage"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scaleType="fitXY"
@@ -23,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/ItemTitle"
+            android:id="@+id/cardItemTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_10"
@@ -35,10 +36,10 @@
             android:textSize="@dimen/text_24"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ItemImage" />
+            app:layout_constraintTop_toBottomOf="@id/cardItemImage" />
 
         <TextView
-            android:id="@+id/ItemDescription"
+            android:id="@+id/cardItemDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_10"
@@ -49,7 +50,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/text_18"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ItemTitle" />
+            app:layout_constraintTop_toBottomOf="@id/cardItemTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
